# tigris-runtime

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi.cmake
examples/esp32/: .gitignore  CMakeLists.txt  README.md  partitions_esp32.csv  partitions_esp32s3.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
examples/esp32/components/tigris_runtime/: CMakeLists.txt
examples/esp32/main/: CMakeLists.txt  main.c
examples/esp32/scripts/: build.sh  clean.sh  deploy.sh  flash.sh  flash_plan.sh  monitor.sh
include/: tigris.h  tigris_executor.h  tigris_kernels.h  tigris_kernels_cmsis_nn.h  tigris_kernels_esp_nn.h  tigris_kernels_s8.h  tigris_loader.h  tigris_lz4.h  tigris_mem.h
src/: tigris_executor.c  tigris_kernels.c  tigris_kernels_cmsis_nn.c  tigris_kernels_esp_nn.c  tigris_kernels_s8.c  tigris_loader.c  tigris_lz4.c  tigris_mem.c
test/: dump_plan.c  run_all.sh  test_e2e.c  test_executor.c  test_kernels.c  test_kernels_s8.c  test_loader.c  test_lz4.c  test_plan_contract.c  test_s8_e2e.c  test_yolo_s8.c
